--- a/ko-KR/meta.yml
+++ b/ko-KR/meta.yml
@@ -7,10 +7,9 @@ duration: 1
 listed: false
 ingredient: true
 copyedit: true
-curriculum: creator, design-0, programming-0, phys-comp-0, manufacture-0, community-0
+curriculum: 작성자, 디자인 -0, 프로그래밍 -0, 물리적 조립-0, 제조 -0, 커뮤니티 -0
 interests: ""
 technologies: ""
 site_areas:
 steps:
-  - 
-    title: 소개
+  - title: 소개
