--- a/hr-HR/meta.yml
+++ b/hr-HR/meta.yml
@@ -10,6 +10,6 @@ copyedit: true
 curriculum: creator, design-0, programming-0, phys-comp-0, manufacture-0, community-0
 interests: ""
 technologies: ""
-site_areas: ""
+site_areas:
 steps:
   - title: Uvod
