--- a/ko-KR/meta.yml
+++ b/ko-KR/meta.yml
@@ -1,13 +1,13 @@
 ---
 title: 자바 스크립트에서 변수 만들기
-hero_image: images / banner.png
+hero_image: images/banner.png
 description: 자바 스크립트에서 변수를 만드는 방법 배우기
 theme: red
 duration: 1
 listed: false
 ingredient: true
 copyedit: true
-curriculum: 작성자, 디자인 -0, 프로그래밍 -0, 물리적 조립-0, 제조 -0, 커뮤니티 -0
+curriculum: creator, design-0, programming-0, phys-comp-0, manufacture-0, community-0
 interests: ""
 technologies: ""
 site_areas:
