--- a/zh-CN/meta.yml
+++ b/zh-CN/meta.yml
@@ -1,8 +1,9 @@
-title: 在 JavaScript 中创建一个变量
+---
+title: 创建一个JavaScript变量
 hero_image: images/banner.png
 description: 学习如何在 JavaScript 中创建变量
-theme: red # possible values: blue, green, navy, orange, red, turquoise, violet, yellow
-duration: 1 # possible values: 1, 2 or 3
+theme: red
+duration: 1
 listed: false
 ingredient: true
 copyedit: true
