--- a/es-LA/meta.yml
+++ b/es-LA/meta.yml
@@ -1,7 +1,7 @@
 ---
-title: Creare una variabile in JavaScript
+title: Crea una variable en JavaScript
 hero_image: images/banner.png
-description: Impara a creare una variabile in JavaScript
+description: Aprende cómo crear una variable en JavaScript
 theme: red
 duration: 1
 listed: false
@@ -12,4 +12,4 @@ interests: ""
 technologies: ""
 site_areas:
 steps:
-  - title: Introduzione
+  - title: Introducción
