--- a/no-NO/meta.yml
+++ b/no-NO/meta.yml
@@ -1,7 +1,7 @@
 ---
-title: Creare una variabile in JavaScript
+title: Opprett en variabel i JavaScript
 hero_image: images/banner.png
-description: Impara a creare una variabile in JavaScript
+description: Lær hvordan du lager en variabel i JavaScript
 theme: red
 duration: 1
 listed: false
@@ -12,4 +12,4 @@ interests: ""
 technologies: ""
 site_areas:
 steps:
-  - title: Introduzione
+  - title: Introduksjon
