--- a/uk-UA/meta.yml
+++ b/uk-UA/meta.yml
@@ -1,7 +1,7 @@
 ---
-title: Создание переменной в JavaScript
+title: Створення змінної в JavaScript
 hero_image: images/banner.png
-description: Узнай, как создать переменную в JavaScript
+description: Дізнайся, як створити змінну в JavaScript
 theme: red #possible values: blue, green, navy, orange, red, turquoise, violet, yellow
 duration: 1 #possible values: 1, 2 or 3
 listed: false
@@ -12,4 +12,4 @@ interests: ""
 technologies: ""
 site_areas:
 steps:
-  - title: Введение
+  - title: Вступ
